--- a/travel-blog/src/components/navbar/Navbar.scss
+++ b/travel-blog/src/components/navbar/Navbar.scss
@@ -38,3 +38,16 @@ $medium-breakpoint: 960px;
     background-color: $primary;
     color: white;
 }
+
+.title { 
+    font-weight: 300;
+    font-size: 32px;
+    margin: 0;
+}
+
+.titletwo { 
+    font-weight: 100;
+    font-size: 16px;
+    font-style: italic;
+    margin: 0;
+}
