--- a/travel-blog/src/components/footer/Footer.scss
+++ b/travel-blog/src/components/footer/Footer.scss
@@ -1,16 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
-
-$site-width: 1200px;
-$hero-width: 1600px;
-$profile-image-width: 300px;
-
-$gutter: 8px;
-$gray: #333;
-$primary: #1977F3;
-$primary-light: #EEF5FE;
-
-$small-breakpoint: 500px;
-$medium-breakpoint: 960px;
+@import "../../App.scss";
 
 .footer { 
     background-color: $primary;
